🔧 Implement Environment Variable Configuration
✅ **Environment Variables Now Used Throughout:**
- Created comprehensive config.py module with python-dotenv
- All database connections now use DATABASE_URL from env vars
- Ollama configuration (host, models) configurable via env vars
- Docker Compose supports environment variable overrides

🔒 **Security & Privacy Improvements:**
- Remove personal documents (PDFs, thumbnails, metadata) from git
- Updated .gitignore to exclude all personal data files
- Added .env.example with secure configuration template
- Configuration validation with warnings for production

🛠 **Technical Improvements:**
- Centralized configuration management in backend/config.py
- Support for POSTGRES_USER, POSTGRES_PASSWORD, POSTGRES_DB, etc.
- Configurable OLLAMA_HOST, CHAT_MODEL, EMBEDDING_MODEL
- Default values work for local development

📖 **Documentation:**
- Updated README with environment variable setup instructions
- Clear explanation of important configuration options
- Copy .env.example → .env workflow

🚨 **BREAKING CHANGES:**
- Database credentials changed: myuser/mypassword → calibre_user/secure_calibre_2024
- Users must copy .env.example to .env for local development

--- a/.gitignore
+++ b/.gitignore
@@ -227,12 +227,17 @@ postgres_data/
 # Document uploads and processing
 backend/data/temp/
 backend/data/uploaded_files/
+backend/data/library/documents/
+backend/data/library/metadata/
+backend/data/library/thumbnails/
+backend/data/pdf_files/
 
 # Environment variables
 .env
 .env.local
 .env.production
 .env.development
+!.env.example
 
 # Docker
 .dockerignore
