--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,9 @@ services:
     image: pgvector/pgvector:pg16
     container_name: calibre-ai-db
     environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: my_rag_db
+      POSTGRES_USER: ${POSTGRES_USER:-calibre_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-secure_calibre_2024}
+      POSTGRES_DB: ${POSTGRES_DB:-calibre_ai_db}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
